--- a/.gitmodules
+++ b/.gitmodules
@@ -1,6 +1,3 @@
-[submodule "wp-content/themes/jng15"]
-	path = wp-content/themes/jng15
-	url = https://github.com/jngutteridge/wptheme_jng15.git
-[submodule "wp-content/themes/jng16"]
-	path = wp-content/themes/jng16
+[submodule "web/wp-content/themes/wptheme_jng16"]
+	path = web/wp-content/themes/wptheme_jng16
 	url = https://github.com/jngutteridge/wptheme_jng16.git
